chore: update readme

--- a/.github/pr-labeler-config.yml
+++ b/.github/pr-labeler-config.yml
@@ -1,6 +1,6 @@
 feature: [feature/*, "feat/*"]
 bug: "fix/*"
-chore: "chore/*"
+chore: "chore/chr*"
 documentation: ["docs/*", "documentation/*"]
 enhancement: ["perf/*", "refactor/*", "ci/*", "build/*"]
 skip-changelog: ["release/*"]
