fix: dependabot pattern on vrt action

--- a/.github/workflows/visual_regression_tests.yml
+++ b/.github/workflows/visual_regression_tests.yml
@@ -3,7 +3,7 @@ name: "Visual Tests"
 on:
   pull_request:
     branches-ignore:
-      - "dependabot**"
+      - "dependabot/**"
     types: [opened, synchronize, reopened, ready_for_review]
   push:
     paths:
