--- a/.github/workflows/visual_regression_tests.yml
+++ b/.github/workflows/visual_regression_tests.yml
@@ -12,9 +12,10 @@ on:
 jobs:
   install-cache:
     name: Install and cache dependencies
+    if: github.triggering_actor != 'dependabot' || contains(github.event.pull_request.draft, false)
     runs-on: ubuntu-latest
-    if: ${{ (github.actor != 'dependabot[bot]') || github.event.pull_request.draft == false }}
     steps:
+      - run: echo ${{ github.triggering_actor }}
       - name: Checkout Commit
         uses: actions/checkout@v2
       - name: Cache yarn dependencies
@@ -31,7 +32,7 @@ jobs:
   visual-tests:
     name: Run visual tests with Chromatic
     runs-on: ubuntu-latest
-    if: ${{ (github.actor != 'dependabot[bot]') || github.event.pull_request.draft == false }}
+    if: contains(github.event.pull_request.draft, false)
     needs: install-cache
     steps:
       - uses: actions/checkout@v2
