--- a/.github/workflows/visual_regression_tests.yml
+++ b/.github/workflows/visual_regression_tests.yml
@@ -12,12 +12,11 @@ on:
 jobs:
   install-cache:
     name: Install and cache dependencies
-    if: github.triggering_actor != 'dependabot[bot]' || contains(github.event.pull_request.draft, false)
+    if: ${{ github.triggering_actor != 'dependabot[bot]' || contains(github.event.pull_request.draft, false) }}
     runs-on: ubuntu-latest
     steps:
       - run: echo ${{ github.triggering_actor }}
-      - name: Checkout Commit
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - name: Cache yarn dependencies
         uses: actions/cache@v3
         id: yarn-cache
