fix: update if conditional on vrt action

--- a/.github/workflows/visual_regression_tests.yml
+++ b/.github/workflows/visual_regression_tests.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   install-cache:
     name: Install and cache dependencies
-    if: ${{ github.triggering_actor != 'dependabot[bot]' || contains(github.event.pull_request.draft, false) }}
+    if: ${{ github.triggering_actor != 'dependabot[bot]' && contains(github.event.pull_request.draft, false) }}
     runs-on: ubuntu-latest
     steps:
       - run: echo ${{ github.triggering_actor }}
