fix(components): change box and text to use style-system/emotion

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@changesets/cli": "^2.22.0",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@emotion/jest": "^11.10.0",
     "@storybook/addon-a11y": "^6.5.12",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-docs": "^6.5.12",
@@ -52,8 +53,10 @@
     "jest": "^28.1.2",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.1.2",
+    "jest-styled-components": "^7.1.1",
     "jest-watch-typeahead": "^2.2.0",
     "lint-staged": "^13.0.3",
+    "lodash": "^4.17.21",
     "plop": "^3.1.1",
     "prettier": "^2.5.1",
     "react": "^18.1.0",
