--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -28,11 +28,21 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@localyze-pluto/theme": "^0.0.2",
-    "@stitches/react": "^1.2.8",
-    "lodash": "^4.17.21"
+    "@styled-system/css": "^5.1.5",
+    "@styled-system/should-forward-prop": "^5.1.5",
+    "@styled-system/theme-get": "^5.1.2",
+    "@types/styled-system": "^5.1.15",
+    "@types/styled-system__css": "^5.0.17",
+    "@types/styled-system__should-forward-prop": "^5.1.2",
+    "@types/styled-system__theme-get": "^5.0.2",
+    "csstype": "^3.1.1",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
+    "@emotion/jest": "^11.10.0",
     "@localyze-pluto/eslint-config": "^1.0.1",
     "@localyze-pluto/tsconfig": "^1.0.0",
     "@testing-library/jest-dom": "^5.14.5",
@@ -43,6 +53,7 @@
     "eslint": "^8.24.0",
     "jest": "^28.1.2",
     "jest-dom": "^4.0.0",
+    "jest-styled-components": "^7.1.1",
     "jest-environment-jsdom": "^29.1.2",
     "jest-watch-typeahead": "^2.2.0",
     "prettier": "^2.7.1",
