fix(theme): convert theme to use style-system/emotion

--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -28,7 +28,16 @@
     "tsc": "tsc"
   },
   "dependencies": {
-    "@stitches/react": "^1.2.8"
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@styled-system/css": "^5.1.5",
+    "@styled-system/should-forward-prop": "^5.1.5",
+    "@styled-system/theme-get": "^5.1.2",
+    "@types/styled-system": "^5.1.15",
+    "@types/styled-system__css": "^5.0.17",
+    "@types/styled-system__should-forward-prop": "^5.1.2",
+    "@types/styled-system__theme-get": "^5.0.2",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@localyze-pluto/eslint-config": "^1.0.1",
