fix(theme): convert theme to use xStyle library
BREAKING CHANGE: The underlying styling library has been changed from using StitchesJS to xStyled. See changelog for more details.

--- a/packages/theme/tsconfig.json
+++ b/packages/theme/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "dist/"
   },
-  "include": ["."],
+  "include": ["**/*.ts", "**/*.tsx", "xstyled.d.ts"],
   "exclude": ["dist", "build", "node_modules"]
 }
