--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.14.5",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^28.1.4",
     "cspell": "^6.12.0",
     "danger": "^11.1.4",
     "eslint": "^8.24.0",
     "husky": "^8.0.1",
     "jest": "^28.1.2",
-    "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.1.2",
     "jest-watch-typeahead": "^2.2.0",
     "lint-staged": "^13.0.3",
