--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -31,6 +31,10 @@
     "@xstyled/styled-components": "^3.6.0",
     "styled-components": "^5.3.6"
   },
+  "peerDependencies": {
+    "@xstyled/styled-components": "^3.6.0",
+    "styled-components": "^5.3.6"
+  },
   "devDependencies": {
     "@localyze-pluto/eslint-config": "^1.0.1",
     "@localyze-pluto/tsconfig": "^1.0.0",
