--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -28,13 +28,17 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.12",
     "@localyze-pluto/theme": "^1.0.2",
     "@xstyled/styled-components": "^3.6.0",
+    "lodash": "^4.17.21",
     "styled-components": "^5.3.6"
   },
   "peerDependencies": {
+    "@heroicons/react": "^2.0.12",
     "@localyze-pluto/theme": "^1.0.2",
     "@xstyled/styled-components": "^3.6.0",
+    "lodash": "^4.17.21",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
