--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "workspaces": [
     "packages/**"
   ],
+  "dependencies": {
+    "@tanstack/react-table": "^8.5.15"
+  },
   "devDependencies": {
     "@changesets/changelog-github": "0.4.7",
     "@changesets/cli": "^2.25.0",
