--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -27,22 +27,19 @@
     "test": "jest",
     "tsc": "tsc"
   },
-  "dependencies": {
-    "@heroicons/react": "^2.0.12",
-    "@localyze-pluto/theme": "^1.0.5",
-    "@xstyled/styled-components": "^3.6.0",
-    "lodash": "^4.17.21",
-    "styled-components": "^5.3.6"
-  },
   "peerDependencies": {
     "@heroicons/react": "^2.0.12",
     "@localyze-pluto/theme": "^1.0.5",
     "@xstyled/styled-components": "^3.6.0",
     "lodash": "^4.17.21",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@heroicons/react": "^2.0.12",
     "@localyze-pluto/eslint-config": "^1.0.1",
+    "@localyze-pluto/theme": "^1.0.5",
     "@localyze-pluto/tsconfig": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
@@ -51,14 +48,17 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.26",
+    "@xstyled/styled-components": "^3.6.0",
     "eslint": "^8.25.0",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^29.2.1",
     "jest-watch-typeahead": "^2.2.0",
+    "lodash": "^4.17.21",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "styled-components": "^5.3.6",
     "ts-jest": "^28.0.5",
     "tslib": "^2.4.0",
     "tsup": "^6.3.0",
