--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -32,8 +32,8 @@
     "@localyze-pluto/theme": "^1.0.6",
     "@xstyled/styled-components": "^3.6.0",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0.2 || ^18.2.0",
+    "react-dom": "^17.0.2 || ^18.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
