--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -29,8 +29,8 @@
   },
   "peerDependencies": {
     "@xstyled/styled-components": "^3.6.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0.2 || ^18.2.0",
+    "react-dom": "^17.0.2 || ^18.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
