--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2 || ^18.2.0",
     "react-dom": "^17.0.2 || ^18.2.0",
+    "react-uid": "^2.3.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
@@ -59,6 +60,7 @@
     "pretty-quick": "^3.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-uid": "^2.3.2",
     "styled-components": "^5.3.6",
     "ts-jest": "^28.0.5",
     "tslib": "^2.4.0",
