--- a/packages/design-tokens/package.json
+++ b/packages/design-tokens/package.json
@@ -2,9 +2,8 @@
   "name": "@localyze-pluto/design-tokens",
   "version": "0.0.0",
   "description": "Pluto Design System Design Tokens",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/js/variables.js",
+  "types": "./dist/js/variables.d.ts",
   "sideEffects": false,
   "license": "MIT",
   "files": [
@@ -19,7 +18,7 @@
     "directory": "packages/design-tokens"
   },
   "scripts": {
-    "build": "yarn clean && node ./build.js",
+    "build": "yarn clean && style-dictionary build ",
     "clean": "style-dictionary clean",
     "lint": "TIMING=1 eslint src/**/*.ts* --fix",
     "prettier-check": "prettier --check package.json tsconfig.json \"./src/**/*.{tsx,ts,json}\"",
