feat(components): add file uploader

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -62,6 +62,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.26",
+    "@uppy/core": "^3.0.4",
     "@xstyled/styled-components": "^3.6.0",
     "chromatic": "^6.11.4",
     "eslint": "^8.25.0",
