--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^28.1.4",
+    "assert": "^2.0.0",
     "cspell": "^6.12.0",
     "danger": "^11.1.4",
     "eslint": "^8.25.0",
