--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -27,12 +27,19 @@
     "test": "jest",
     "tsc": "tsc"
   },
+  "dependencies": {
+    "@heroicons/react": "^2.0.12",
+    "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-progress": "^1.0.1",
+    "ariakit": "^2.0.0-next.41"
+  },
   "peerDependencies": {
     "@heroicons/react": "^2.0.12",
     "@localyze-pluto/theme": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-progress": "^1.0.1",
     "@xstyled/styled-components": "^3.6.0",
+    "ariakit": "^2.0.0-next.41",
     "html-react-parser": "^3.0.4",
     "lodash": "^4.17.21",
     "react": "^17.0.2 || ^18.2.0",
@@ -56,6 +63,7 @@
     "@types/react-dom": "^17.0.2",
     "@types/styled-components": "^5.1.26",
     "@xstyled/styled-components": "^3.6.0",
+    "chromatic": "^6.11.4",
     "eslint": "^8.25.0",
     "html-react-parser": "^3.0.4",
     "jest": "^28.1.2",
