feat(components): added react-dropzone as a package

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "packages/**"
   ],
   "dependencies": {
-    "@tanstack/react-table": "^8.5.30"
+    "@tanstack/react-table": "^8.5.30",
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
     "@changesets/changelog-github": "0.4.7",
