--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -54,8 +54,10 @@ jobs:
           path: |
             packages/components/**/dist/**/*
             packages/theme/**/dist/**/*
+            packages/design-tokens/**/dist/**/*
             !packages/components/**/node_modules/**/*
             !packages/theme/**/node_modules/**/*
+            !packages/design-tokens/**/node_modules/**/*
 
   type_check:
     name: Type check
