--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
     "@changesets/changelog-github": "0.4.7",
     "@changesets/cli": "^2.25.2",
     "@commitlint/cli": "^17.3.0",
