--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -28,12 +28,14 @@
     "tsc": "tsc"
   },
   "peerDependencies": {
+    "@localyze-pluto/design-tokens": "^0.0.3",
     "@xstyled/styled-components": "^3.6.0",
     "react": "^17.0.2 || ^18.2.0",
     "react-dom": "^17.0.2 || ^18.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@localyze-pluto/design-tokens": "^0.0.3",
     "@localyze-pluto/eslint-config": "^1.0.1",
     "@localyze-pluto/tsconfig": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.5",
