chore: setup kodiak config

--- a/.github/pr-labeler-config.yml
+++ b/.github/pr-labeler-config.yml
@@ -1,6 +1,7 @@
-feature: [feature/*, "feat/*"]
+feature: ["feature/*", "feat/*"]
 bug: "fix/*"
 chore: "chore/*"
 documentation: ["docs/*", "documentation/*"]
 enhancement: ["perf/*", "refactor/*", "ci/*", "build/*"]
 skip-changelog: ["release/*"]
+do-not-merge: ["**/*"]
