--- a/.github/pr-labeler-config.yml
+++ b/.github/pr-labeler-config.yml
@@ -1,4 +1,4 @@
-feature: [feature/*, "feat/*"]
+feature: ["feature/*", "feat/*"]
 bug: "fix/*"
 chore: "chore/*"
 documentation: ["docs/*", "documentation/*"]
