--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,5 +8,6 @@ updates:
       time: "04:00"
       timezone: Europe/Berlin
     open-pull-requests-limit: 20
-    reviewers:
-      - "localitos/frontend"
+    labels:
+      - "dependencies"
+      - "automerge"
