--- a/.kodiak.toml
+++ b/.kodiak.toml
@@ -1,8 +1,6 @@
 version = 1
 
 [merge]
-automerge_label = ["🚀 merge it!", "Merge It"]
-blocking_labels = ["WIP", "Do Not Merge"]
 method = "squash"
 
 [merge.automerge_dependencies]
@@ -10,3 +8,6 @@ method = "squash"
 # do not automerge "major" version upgrades.
 versions = ["minor", "patch"]
 usernames = ["dependabot"]
+
+[approve]
+auto_approve_labels = ["dependencies"]
