--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -31,6 +31,7 @@
     "@heroicons/react": "^2.0.12",
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-progress": "^1.0.1",
+    "@radix-ui/react-toast": "^1.1.2",
     "ariakit": "^2.0.0-next.41",
     "react-dropzone": "^14.2.3"
   },
@@ -39,6 +40,7 @@
     "@localyze-pluto/theme": "^2.0.2",
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-progress": "^1.0.1",
+    "@radix-ui/react-toast": "^1.1.2",
     "@xstyled/styled-components": "^3.6.0",
     "ariakit": "^2.0.0-next.41",
     "html-react-parser": "^3.0.4",
