--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -31,6 +31,7 @@
     "@heroicons/react": "^2.0.12",
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-progress": "^1.0.1",
+    "@radix-ui/react-radio-group": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.2",
     "ariakit": "^2.0.0-next.43",
     "react-dropzone": "^14.2.3"
