--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -78,6 +78,7 @@
     "lodash": "^4.17.21",
     "prettier": "^2.8.1",
     "pretty-quick": "^3.1.3",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-uid": "^2.3.2",
