feat(components): add Switch component and stories

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-progress": "^1.0.1",
     "@radix-ui/react-radio-group": "^1.1.0",
+    "@radix-ui/react-switch": "^1.0.1",
     "@radix-ui/react-toast": "^1.1.2",
     "ariakit": "^2.0.0-next.43",
     "react-dropzone": "^14.2.3"
@@ -41,6 +42,8 @@
     "@localyze-pluto/theme": "^2.0.5",
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-progress": "^1.0.1",
+    "@radix-ui/react-radio-group": "^1.1.0",
+    "@radix-ui/react-switch": "^1.0.1",
     "@radix-ui/react-toast": "^1.1.2",
     "@xstyled/styled-components": "^3.6.0",
     "ariakit": "^2.0.0-next.43",
@@ -57,8 +60,6 @@
     "@localyze-pluto/eslint-config": "^1.0.1",
     "@localyze-pluto/theme": "^2.0.5",
     "@localyze-pluto/tsconfig": "^1.0.0",
-    "@radix-ui/react-checkbox": "^1.0.1",
-    "@radix-ui/react-progress": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "^8.0.1",
