--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "prettier": "^2.8.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.6.2",
     "ts-jest": "^28.0.5",
     "turbo": "latest"
   },
