--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "add-component": "plop",
     "build": "turbo build",
-    "build-storybook": "build-storybook",
+    "build-storybook": "storybook build",
     "changeset": "changeset",
     "clean": "turbo clean && rm -rf node_modules",
     "dev": "turbo dev --no-cache --parallel --continue",
@@ -18,7 +18,7 @@
     "lint": "turbo lint",
     "prepare": "husky install",
     "release": "turbo build && changeset publish",
-    "start": "start-storybook -p 6006",
+    "start": "storybook dev -p 6006",
     "test": "jest",
     "test:ci": "jest --ci",
     "test:coverage": "jest --runInBand --coverage",
@@ -39,16 +39,15 @@
     "@changesets/cli": "^2.26.0",
     "@commitlint/cli": "^17.4.1",
     "@commitlint/config-conventional": "^17.4.0",
-    "@storybook/addon-a11y": "^6.5.15",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-docs": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/addon-viewport": "^6.5.15",
-    "@storybook/builder-webpack5": "^6.5.15",
-    "@storybook/manager-webpack5": "^6.5.15",
-    "@storybook/react": "^6.5.15",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-a11y": "^7.0.0-beta.25",
+    "@storybook/addon-actions": "^7.0.0-beta.25",
+    "@storybook/addon-docs": "^7.0.0-beta.25",
+    "@storybook/addon-essentials": "^7.0.0-beta.25",
+    "@storybook/addon-links": "^7.0.0-beta.25",
+    "@storybook/addon-viewport": "^7.0.0-beta.25",
+    "@storybook/nextjs": "^7.0.0-beta.25",
+    "@storybook/react": "^7.0.0-beta.25",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.4.3",
@@ -57,16 +56,19 @@
     "cspell": "^6.18.1",
     "danger": "^11.2.1",
     "eslint": "^8.31.0",
+    "eslint-plugin-storybook": "^0.6.10",
     "husky": "^8.0.3",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^29.2.2",
     "jest-watch-typeahead": "^2.2.1",
     "lint-staged": "^13.1.0",
+    "next": "^13.1.1",
     "plop": "^3.1.1",
     "prettier": "^2.8.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.6.2",
+    "storybook": "^7.0.0-beta.25",
     "ts-jest": "^28.0.5",
     "turbo": "latest"
   },
