--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @richbachman @rssilva @RohitRajendran @BrianLincoln @apvale @blumaa @jvaladas
+* @rssilva @RohitRajendran @BrianLincoln @apvale @blumaa @jvaladas @nyan07
