--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
     "@changesets/cli": "^2.26.0",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
-    "@storybook/addon-a11y": "^7.0.0-beta.48",
-    "@storybook/addon-actions": "^7.0.0-beta.59",
-    "@storybook/addon-docs": "^7.0.0-beta.48",
-    "@storybook/addon-essentials": "^7.0.0-beta.59",
-    "@storybook/addon-links": "^7.0.0-beta.59",
-    "@storybook/addon-viewport": "^7.0.0-beta.53",
-    "@storybook/nextjs": "^7.0.0-beta.59",
-    "@storybook/react": "^7.0.0-beta.59",
+    "@storybook/addon-a11y": "^7.0.0-rc.4",
+    "@storybook/addon-actions": "^7.0.0-rc.4",
+    "@storybook/addon-docs": "^7.0.0-rc.4",
+    "@storybook/addon-essentials": "^7.0.0-rc.4",
+    "@storybook/addon-links": "^7.0.0-rc.4",
+    "@storybook/addon-viewport": "^7.0.0-rc.4",
+    "@storybook/nextjs": "^7.0.0-rc.4",
+    "@storybook/react": "^7.0.0-rc.4",
     "@storybook/testing-library": "^0.0.14-next.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
@@ -70,7 +70,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.8.2",
-    "storybook": "^7.0.0-beta.34",
+    "storybook": "^7.0.0-rc.4",
     "ts-jest": "^28.0.5",
     "turbo": "latest"
   },
