chore: change codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @rssilva @RohitRajendran @BrianLincoln @apvale @blumaa @jvaladas @nyan07
+* @Localitos/team-t-rex @Localitos/team-octo @Localitos/team-yeti
