--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -35,7 +35,8 @@
     "@radix-ui/react-switch": "^1.0.1",
     "@radix-ui/react-toast": "^1.1.2",
     "ariakit": "^2.0.0-next.43",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.43.2"
   },
   "peerDependencies": {
     "@heroicons/react": "^2.0.16",
@@ -52,6 +53,7 @@
     "react": "^17.0.2 || ^18.2.0",
     "react-dom": "^17.0.2 || ^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.43.2",
     "react-uid": "^2.3.2",
     "styled-components": "^5.3.6"
   },
