chore: disable auto rebase from dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,7 @@ updates:
       time: "04:00"
       timezone: Europe/Berlin
     open-pull-requests-limit: 20
+    rebase-strategy: "disabled"
     labels:
       - "dependencies"
       - "automerge"
