--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-switch": "^1.0.1",
     "@radix-ui/react-toast": "^1.1.2",
     "ariakit": "^2.0.0-next.43",
+    "lucide-react": "^0.218.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.2"
   },
@@ -50,6 +51,7 @@
     "ariakit": "^2.0.0-next.43",
     "html-react-parser": "^3.0.9",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.218.0",
     "react": "^17.0.2 || ^18.2.0",
     "react-dom": "^17.0.2 || ^18.2.0",
     "react-dropzone": "^14.2.3",
