--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -52,8 +52,8 @@
     "html-react-parser": "^3.0.9",
     "lodash": "^4.17.21",
     "lucide-react": "^0.218.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2 || ^18.2.0",
+    "react-dom": "^17.0.2 || ^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.2",
     "react-uid": "^2.3.2",
