--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -30,8 +30,8 @@
   "peerDependencies": {
     "@localyze-pluto/design-tokens": "^0.4.0",
     "@xstyled/styled-components": "^3.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2 || ^18.2.0",
+    "react-dom": "^17.0.2 || ^18.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
