--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev": "turbo dev --no-cache --parallel --continue",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo lint",
+    "prettier-check": "turbo prettier-check",
     "prepare": "husky install",
     "release": "turbo build && changeset publish",
     "start": "storybook dev -p 6006",
