--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "husky": "^8.0.3",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fail-on-console": "^3.1.1",
     "jest-watch-typeahead": "^2.2.2",
     "lint-staged": "^15.0.2",
     "next": "^13.2.3",
