--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@localyze-pluto/eslint-config",
+  "description": "eslint config to be shared across repos",
   "version": "1.2.0",
   "main": ".eslintrc.js",
   "license": "MIT",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-turbo": "latest",
     "eslint-plugin-cypress": "^2.15.1",
