--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -29,12 +29,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@ariakit/react": "^0.3.6",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.1",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
-    "ariakit": "^2.0.0-next.44",
     "lucide-react": "^0.288.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.3"
