--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^18.4.3",
     "@storybook/addon-a11y": "^7.0.22",
-    "@storybook/addon-actions": "^7.6.1",
-    "@storybook/addon-docs": "^7.6.1",
+    "@storybook/addon-actions": "^7.0.0-rc.4",
+    "@storybook/addon-docs": "^7.5.1",
     "@storybook/addon-essentials": "^7.0.0-rc.4",
-    "@storybook/addon-links": "^7.6.1",
+    "@storybook/addon-links": "^7.5.3",
     "@storybook/addon-viewport": "^7.5.3",
     "@storybook/nextjs": "^7.5.3",
     "@storybook/react": "^7.5.3",
@@ -58,7 +58,7 @@
     "assert": "^2.1.0",
     "cspell": "^6.30.2",
     "danger": "^11.3.0",
-    "eslint": "^8.54.0",
+    "eslint": "^8.52.0",
     "eslint-plugin-storybook": "^0.6.11",
     "husky": "^8.0.3",
     "jest": "^28.1.2",
@@ -72,7 +72,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "storybook": "^7.6.0",
+    "storybook": "^7.0.0-rc.4",
     "ts-jest": "^28.0.5",
     "turbo": "latest"
   },
