--- a/package.json
+++ b/package.json
@@ -42,14 +42,14 @@
     "@changesets/cli": "^2.26.2",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^18.4.3",
-    "@storybook/addon-a11y": "^7.0.22",
-    "@storybook/addon-actions": "^7.0.0-rc.4",
-    "@storybook/addon-docs": "^7.5.1",
-    "@storybook/addon-essentials": "^7.0.0-rc.4",
-    "@storybook/addon-links": "^7.5.3",
-    "@storybook/addon-viewport": "^7.5.3",
-    "@storybook/nextjs": "^7.5.3",
-    "@storybook/react": "^7.5.3",
+    "@storybook/addon-a11y": "^7.6.3",
+    "@storybook/addon-actions": "^7.6.3",
+    "@storybook/addon-docs": "^7.6.3",
+    "@storybook/addon-essentials": "^7.6.3",
+    "@storybook/addon-links": "^7.6.3",
+    "@storybook/addon-viewport": "^7.6.3",
+    "@storybook/nextjs": "^7.6.3",
+    "@storybook/react": "^7.6.3",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.1.2",
@@ -72,7 +72,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "storybook": "^7.0.0-rc.4",
+    "storybook": "^7.6.3",
     "ts-jest": "^28.0.5",
     "turbo": "latest"
   },
