--- a/package.json
+++ b/package.json
@@ -42,14 +42,14 @@
     "@changesets/cli": "^2.27.1",
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
-    "@storybook/addon-a11y": "^8.0.7",
-    "@storybook/addon-actions": "^8.0.7",
-    "@storybook/addon-docs": "^8.0.7",
-    "@storybook/addon-essentials": "^8.0.7",
-    "@storybook/addon-links": "^8.0.7",
-    "@storybook/addon-viewport": "^8.0.7",
-    "@storybook/nextjs": "^8.0.7",
-    "@storybook/react": "^8.0.7",
+    "@storybook/addon-a11y": "^8.1.0-alpha.7",
+    "@storybook/addon-actions": "^8.1.0-alpha.7",
+    "@storybook/addon-docs": "^8.1.0-alpha.7",
+    "@storybook/addon-essentials": "^8.1.0-alpha.7",
+    "@storybook/addon-links": "^8.1.0-alpha.7",
+    "@storybook/addon-viewport": "^8.1.0-alpha.7",
+    "@storybook/nextjs": "^8.1.0-alpha.7",
+    "@storybook/react": "^8.1.0-alpha.7",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.2",
@@ -72,7 +72,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "storybook": "^8.0.7",
+    "storybook": "^8.1.0-alpha.7",
     "ts-jest": "^28.0.5",
     "turbo": "latest"
   },
