update packages step by step

--- a/package.json
+++ b/package.json
@@ -29,50 +29,50 @@
     "packages/**"
   ],
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
-    "@tanstack/react-table": "^8.16.0",
-    "formik": "^2.4.5",
+    "@hookform/resolvers": "^3.4.2",
+    "@tanstack/react-table": "^8.17.3",
+    "formik": "^2.4.6",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.51.3",
+    "react-hook-form": "^7.51.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.4",
     "@changesets/changelog-github": "0.5.0",
-    "@changesets/cli": "^2.27.1",
+    "@changesets/cli": "^2.27.5",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@storybook/addon-a11y": "^8.1.0-alpha.7",
-    "@storybook/addon-actions": "^8.1.0-alpha.7",
-    "@storybook/addon-docs": "^8.1.0-alpha.7",
-    "@storybook/addon-essentials": "^8.1.0-alpha.7",
-    "@storybook/addon-links": "^8.1.0-alpha.7",
-    "@storybook/addon-viewport": "^8.1.0-alpha.7",
-    "@storybook/nextjs": "^8.1.0-alpha.7",
-    "@storybook/react": "^8.1.0-alpha.7",
+    "@storybook/addon-a11y": "^8.1.5",
+    "@storybook/addon-actions": "^8.1.5",
+    "@storybook/addon-docs": "^8.1.5",
+    "@storybook/addon-essentials": "^8.1.5",
+    "@storybook/addon-links": "^8.1.5",
+    "@storybook/addon-viewport": "^8.1.5",
+    "@storybook/nextjs": "^8.1.5",
+    "@storybook/react": "^8.1.5",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.4",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^28.1.4",
     "assert": "^2.1.0",
-    "cspell": "^8.7.0",
-    "danger": "^12.1.0",
+    "cspell": "^8.8.3",
+    "danger": "^12.3.0",
     "eslint": "^8.57.0",
     "eslint-plugin-storybook": "^0.8.0",
     "husky": "^9.0.11",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-fail-on-console": "^3.2.0",
+    "jest-fail-on-console": "^3.3.0",
     "jest-watch-typeahead": "^2.2.2",
-    "lint-staged": "^15.2.2",
+    "lint-staged": "^15.2.5",
     "next": "^14.2.3",
     "plop": "^4.0.1",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
-    "storybook": "^8.1.0-alpha.7",
+    "storybook": "^8.1.5",
     "ts-jest": "^28.0.5",
     "turbo": "latest"
   },
