--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   ],
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.17.3",
     "formik": "^2.4.6",
     "react-dropzone": "^14.2.3",
