--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.17.3",
     "formik": "^2.4.6",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
+    "react-uid": "^2.3.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
