--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -54,7 +54,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.51.3",
     "react-uid": "^2.3.3",
-    "styled-components": "^5.3.11"
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@localyze-pluto/eslint-config": "^1.27.0",
@@ -69,8 +69,8 @@
     "@types/react-dom": "^18.3.1",
     "@types/styled-components": "^5.1.34",
     "@uppy/core": "^4.2.3",
-    "@xstyled/styled-components": "^3.8.0",
     "chromatic": "^11.18.0",
+    "@xstyled/styled-components": "^4.0.0",
     "eslint": "^8.57.0",
     "html-react-parser": "^5.1.18",
     "jest": "^29.7.0",
@@ -83,7 +83,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-uid": "^2.3.3",
-    "styled-components": "^5.3.11",
+    "styled-components": "^6.1.11",
+    "stylis": "^4.3.2",
     "ts-jest": "^29.2.5",
     "tslib": "^2.8.1",
     "tsup": "^8.3.5",
