--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -32,7 +32,7 @@
     "@xstyled/styled-components": "^3.8.0",
     "react": "^17.0.2 || ^18.2.0",
     "react-dom": "^17.0.2 || ^18.2.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@localyze-pluto/design-tokens": "^2.4.0",
@@ -44,8 +44,7 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/styled-components": "^5.1.34",
-    "@xstyled/styled-components": "^3.8.0",
+    "@xstyled/styled-components": "^4.0.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "jest-dom": "^4.0.0",
@@ -56,6 +55,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.12",
+    "stylis": "^4.3.2",
     "ts-jest": "^29.2.5",
     "tslib": "^2.8.1",
     "tsup": "^8.3.5",
